# DataProject

./: .gitignore  AGENTS.md  README.md  bin.json  get_api_keys.py  logger.py  main.py  pyproject.toml  result.csv
.zed/: debug.json
ELT/: extract_fred.py  extract_http.py  extract_polygon.py  load_fred.py  load_polygon.py  main.py
data/: extraction_checkpoint.json  naics.parquet  naics.txt  sic.txt  sic_naics.parquet  txt_to_parq.py
database/: classification_table.py  clean_db.py  indexing.sql  polygon.duckdb  run.sql  sic_table.py
log_config/: config.json
logger/: logger.py
secret/: .env
